[package]
name = "middleman"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.5.0"
chrono = "0.4.38"
clap = "4.5.21"
dotenvy = "0.15.7"
regex = "1.11.1"
rocksdb = { version = "0.22.0", features = ["multi-threaded-cf"] }
tokio = { version = "1.41.1", features = ["full"] }
tonic = "0.12.3"
url = "2.5.4"
uuid = { version = "1.11.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.14.0"
