[package]
name = "middleman"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
bitflags = "2.8.0"
byteorder = "1.5.0"
byteview = "0.5.3"
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
compact_str = "0.8.1"
dashmap = "6.1.0"
dotenvy = "0.15.7"
env_logger = "0.11.6"
middleman_macros = { version = "0.1.0", path = "../middleman_macros" }
middleman_db = { version = "0.1.0", path = "../middleman_db" }
owning_ref = "0.4.1"
parking_lot = "0.12.3"
paste = "1.0.15"
regex = "1.11.1"
rocksdb = { version = "0.23.0", features = ["multi-threaded-cf"] }
serde = "1.0.217"
serde_derive = "1.0.217"
strum = "0.27.0"
strum_macros = "0.27.0"
tokio = { version = "1.41.1", features = ["full"] }
url = "2.5.4"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
serde_json = "1.0.140"
hyper = { version = "1.6.0", features = ["client", "http1"] }
hyper-util = { version = "0.1.10", features = ["client", "client-legacy", "tokio"] }
tokio-native-tls = "0.3.1"
tower = "0.5.2"
http-body-util = "0.1.3"
atomicbox = "0.4.0"
either = "1.15.0"
http = "1.3.1"
crc32fast = "1.4.2"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
rand = "0.9.0"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "tls-native-tls", "sqlite", "mysql", "postgres"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tower-http = { version = "0.6.2", features = ["trace"] }

[dev-dependencies]
statrs = "0.18.0"
tempfile = "3.14.0"

[dev-dependencies.parking_lot]
version = "0.12.3"
features = ["deadlock_detection"]

[dev-dependencies.tokio]
version = "1.41.1"
features = ["full", "test-util", "tracing"]

[dev-dependencies.axum]
version = "0.8.1"
features = ["macros"]

[profile.release]
panic = 'abort'
